# RustfileIO

./: Cargo.toml  README.md  example.txt
src/: example.txt  fileio.rs  lib.rs  main.rs
